--- a/documentation/interfaces/Payload-1.html
+++ b/documentation/interfaces/Payload-1.html
@@ -69,6 +69,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>payload generic type</p>
+
+            </p>
 
             <p class="comment">
                 <h3>Extends</h3>
@@ -137,6 +144,12 @@
 
 
 
+                            <tr>
+                                <td class="col-md-4">
+                                    <div class="io-description"><p>Payload</p>
+</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
             </section>
@@ -146,14 +159,41 @@
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {encode, TAlgorithm, decode} from &#x27;jwt-simple&#x27;
 
+/**
+ * enum of experation status
+ *
+ * @export
+ * @enum {number}
+ */
 export enum ExpirationStatus {
+    /**
+     * expired
+     */
     Expired &#x3D; &quot;expired&quot;,
+    /**
+     * active
+     */
     Active &#x3D; &quot;active&quot;
 }
 
+/**
+ * dedoce type enum show status of decode
+ *
+ * @export
+ * @enum {number}
+ */
 export enum DecodeType {
+    /**
+     * valid
+     */
     Valid &#x3D; 1,
+    /**
+     * invalid
+     */
     InvalidToken,
+    /**
+     * some error
+     */
     IntegtiryError
 }
 
@@ -163,40 +203,151 @@ export type CreateTokenFunc &#x3D; (
 
 export type CreateExpiresFunc &#x3D; (issued: number) &#x3D;&gt; number
 
+/**
+ * token info type
+ *
+ * @interface TokenInfo
+ */
 interface TokenInfo {
+    /**
+     * show in what date token issued
+     *
+     * @type {number}
+     * @memberof TokenInfo
+     */
     issued: number
+    /**
+     * show in what date token expired
+     *
+     * @type {number}
+     * @memberof TokenInfo
+     */
     expires: number
 }
 
+/**
+ * payload generic type
+ *
+ * @export
+ * @interface Payload
+ * @extends {TokenInfo}
+ * @template T
+ */
 export interface Payload&lt;T&gt; extends TokenInfo {
+    /**
+     * Payload 
+     *
+     * @type {T}
+     * @memberof Payload
+     */
     payload: T
 }
 
+/**
+ * Created token type
+ *
+ * @export
+ * @interface CreatedToken
+ * @extends {TokenInfo}
+ */
 export interface CreatedToken extends TokenInfo {
+    /**
+     * jwt token in string represention
+     *
+     * @type {string}
+     * @memberof CreatedToken
+     */
     token: string
 }
 
+/**
+ * decoded token type
+ *
+ * @export
+ * @interface DecodedToken
+ * @template T
+ */
 export interface DecodedToken&lt;T&gt; {
+    /**
+     * decoded type
+     *
+     * @type {DecodeType}
+     * @memberof DecodedToken
+     */
     type: DecodeType
+    /**
+     * payload can be optional
+     *
+     * @type {Payload&lt;T&gt;}
+     * @memberof DecodedToken
+     * @requires false
+     */
     payload?: Payload&lt;T&gt;
+    /**
+     * experation status
+     *
+     * @type {ExpirationStatus}
+     * @memberof DecodedToken
+     * @requires false
+     */
     expirationStatus?: ExpirationStatus
 }
 
+/**
+ * token factory class
+ * can create token refresh them
+ *
+ * @export
+ * @class TokenFactory
+ */
 export class TokenFactory {
+    /**
+     * Creates an instance of TokenFactory.
+     * @param {string} secretKey
+     * @param {string} refreshSecretKey
+     * @param {TAlgorithm} algorithm
+     * @memberof TokenFactory
+     */
     constructor(
         private readonly secretKey: string,
         private readonly refreshSecretKey: string,
         private readonly algorithm: TAlgorithm
     ) {}
 
+    /**
+     * create token with given payload
+     *
+     * @template T
+     * @param {T} payload
+     * @return {*}  {CreateTokenFunc}
+     * @memberof TokenFactory
+     */
     createToken&lt;T&gt;(payload: T): CreateTokenFunc {
         return this.createSomeToken&lt;T&gt;(payload, this.secretKey)
     }
 
+    /**
+     * create refresh token with given payload
+     *
+     * @template T
+     * @param {T} payload
+     * @return {*}  {CreateTokenFunc}
+     * @memberof TokenFactory
+     */
     createRefreshToken&lt;T&gt;(payload: T): CreateTokenFunc {
         return this.createSomeToken(payload, this.refreshSecretKey)
     }
 
+    /**
+     * create refresh or access token
+     *
+     * @private
+     * @template T
+     * @param {T} payload
+     * @param {string} key
+     * @return {*}  {CreateTokenFunc}
+     * @memberof TokenFactory
+     */
     private createSomeToken&lt;T&gt;(payload: T, key: string): CreateTokenFunc {
         const createTokenFunc: CreateTokenFunc &#x3D; (expiresFunc: CreateExpiresFunc) &#x3D;&gt; {
             const now &#x3D; Date.now()
@@ -219,6 +370,16 @@ export class TokenFactory {
         return createTokenFunc
     }
 
+    /**
+     * decode refresh or access token
+     *
+     * @private
+     * @template T
+     * @param {string} token
+     * @param {string} key
+     * @return {*}  {DecodedToken&lt;T&gt;}
+     * @memberof TokenFactory
+     */
     private decodeSomeToken&lt;T&gt;(token: string, key: string): DecodedToken&lt;T&gt; {
         let result: Payload&lt;T&gt;
         try {
@@ -255,14 +416,38 @@ export class TokenFactory {
         }
     }
 
+    /**
+     * decode access token
+     *
+     * @template T
+     * @param {string} token
+     * @return {*}  {DecodedToken&lt;T&gt;}
+     * @memberof TokenFactory
+     */
     decodeToken&lt;T&gt;(token: string): DecodedToken&lt;T&gt; {
         return this.decodeSomeToken(token, this.secretKey)
     }
 
+    /**
+     * decode refresh token
+     *
+     * @template T
+     * @param {string} token
+     * @return {*}  {DecodedToken&lt;T&gt;}
+     * @memberof TokenFactory
+     */
     decodeRefreshToken&lt;T&gt;(token: string): DecodedToken&lt;T&gt; {
         return this.decodeSomeToken(token, this.refreshSecretKey)
     }
 
+    /**
+     * check expiration status of token
+     *
+     * @private
+     * @param {number} expires
+     * @return {*}  {ExpirationStatus}
+     * @memberof TokenFactory
+     */
     private checkExpirationStatus(expires: number): ExpirationStatus {
         const now &#x3D; Date.now()
 
